--- a/_posts/2018-04-04-BTM.md
+++ b/_posts/2018-04-04-BTM.md
@@ -10,5 +10,5 @@ This is especially useful when ranking or estimating the ability of professional
 
 Parameter estimation in the BTM models are produced as a result of maximum likelihood (MLE).
 
-The estimated probability that team i beats team j can be measured as :
-  $$ P(i>j) = \dfrac{p_i}{p_i + p_j} $$, where $p_i$ represents the ability of team i.
+The estimated probability that team i beats team j can be measured as:   
+        $$ P(i>j) = \dfrac{p_i}{p_i + p_j} $$, where $$p_i$$ represents the ability of team i.
