--- a/_posts/2018-04-04-BTM.md
+++ b/_posts/2018-04-04-BTM.md
@@ -4,7 +4,7 @@ title: Introduction to Bradley-Terry Models
 feature-img: "assets/img/sample_feature_img.png"
 ---
 
-Bradley-Terry logit models can be used on pair-comparision data. Given that data points are drawn from the same population, it can estimate the probability that one individual/team is better than another.
+Bradley-Terry models can be used on pair-comparision data. Given that data points are drawn from the same population, it can estimate the probability that one individual/team is better than another.
 
 This is especially useful when ranking or estimating the ability of professional sport teams. There are also some bioinformatic and genetic applications as well. I'll look to use it in estimating the ability of 2018 NBA playoff teams.  
 
