--- a/_posts/2018-04-04-BTM.md
+++ b/_posts/2018-04-04-BTM.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Introduction to Bradley-Terry Models
-feature-img: "assets/img/sample_feature_img.png"
+feature-img: "assets/img/btm_lebron.jpg"
 ---
 
 Bradley-Terry models can be used on pair-comparision data. Given that data points are drawn from the same population, it can estimate the probability that one individual/team is better than another.
@@ -11,4 +11,4 @@ This is especially useful when ranking or estimating the ability of professional
 Parameter estimation in the BTM models are produced as a result of maximum likelihood (MLE).
 
 The estimated probability that team i beats team j can be measured as:   
-        $$ P(i>j) = \dfrac{p_i}{p_i + p_j} $$, where $$p_i$$ represents the ability of team i.
+        $$ P(i>j) = \dfrac{p_i}{p_i + p_j} $$, where $$p_i$$ represents the ability of team i and is estimated through MLE.
