--- a/_posts/2018-08-04-PYENV.md
+++ b/_posts/2018-08-04-PYENV.md
@@ -8,7 +8,8 @@ This past week I was cleaning up a project at work, that was coming to a good st
 
 I should have started my work by creating a virtual env but oh well. So just a few quick reminders/tips.
 
-Create the virtual environment with the no site packages option so it doesn't see all global packages. This seemed to occur whenever I ran jupyter.
+Create the virtual environment with the no site packages option so it doesn't see all global libraries. Otherwise jupyter will recognize all global libraries brought in my pip.
+
 
 ```bash
 virtualenv --no-site-packages -p /usr/local/bin/python3 .env
@@ -22,4 +23,4 @@ In your .gitignore file toss in `env/`, and this will ignore all those files whe
 
 Also a side note, i hate ipynb_checkpoints and so i tossed that in gitignore as well `,ipynb_checkpoints` and it recognizes and ignores them all.
 
-Hopefully you get as much out of this as I do. I'll probably reference this a 100 times over in the future. 
+Hopefully you get as much out of this as I do. I'll probably reference this a 100 times over in the future.
