add requirements mention

--- a/_posts/2018-08-04-PYENV.md
+++ b/_posts/2018-08-04-PYENV.md
@@ -17,10 +17,20 @@ virtualenv --no-site-packages -p /usr/local/bin/python3 .env
 
 For python2 '/usr/local/bin/python'.
 
+### Git Ignore Files
+
 Storing the all the environment variables in the .env will be helpful later(gitignore). Note this command assumes you are already in the parent directory for which you are creating the environment.
 
 In your .gitignore file toss in `env/`, and this will ignore all those files when pushing to git. This is the advantage of placing all the files in env.
 
 Also a side note, i hate ipynb_checkpoints and so i tossed that in gitignore as well `,ipynb_checkpoints` and it recognizes and ignores them all.
+
+### Requirements - Libraries
+
+There is a quick and easy way to stick all your installed libraries within the environment in a file to maintain reproducability.
+
+```bash
+pip freeze > requirements.txt
+```
 
 Hopefully you get as much out of this as I do. I'll probably reference this a 100 times over in the future.
