--- a/_posts/2018-10-26-git-help.md
+++ b/_posts/2018-10-26-git-help.md
@@ -34,6 +34,15 @@ git checkout branch_name
 
 The first one lists all branches in the repo, and the second command will move you to a specific branch in which work can be done.
 
+Creating new branches
+
+```bash
+git checkout -b [name_of_branch]
+git push origin [name_of_branch]
+```
+
+The first command creates a new branch locally, and the second will create an upstream copy of this branch.
+
 ### Correcting Mistakes
 
 Sometimes mistakes happen and I look to correct them. A fine example of this is reversing a commit.
