new post, python lib creation

--- a/_posts/2018-08-04-PYENV.md
+++ b/_posts/2018-08-04-PYENV.md
@@ -34,3 +34,10 @@ pip freeze > requirements.txt
 ```
 
 Hopefully you get as much out of this as I do. I'll probably reference this a 100 times over in the future.
+
+An additional note, if you are using Jupyter Notebooks. This helps with recognizing envs in Jupyter.
+
+
+```bash
+python -m ipykernel install --user --name kernel_name
+```
