forgot to add some words

--- a/_posts/2018-12-28-PYLIB.md
+++ b/_posts/2018-12-28-PYLIB.md
@@ -4,7 +4,7 @@ title: Building a Python Package
 feature-img:
 ---
 
-I had the privilege of building some Python packages for work. It was one of the tasks on my to-do list that I never really got to.
+I had the privilege of building some Python packages for work. It was one of the tasks on my personal to-do list that I never really got to. Thankfully work changed that for me!
 
 I've learnt a lot building this package from my own experiences as well as external links and felt the need to document this process. Don't want to forget this in the future, ha!
 
