add update on git clean

--- a/_posts/2018-10-26-git-help.md
+++ b/_posts/2018-10-26-git-help.md
@@ -53,3 +53,20 @@ git reset --hard HEAD^
 ```
 
 Use soft, if you want to keep the local changes. Use hard, if you don't want to keep local changes either.
+
+### Clean Branches 
+
+I find that when running git status, there are a lot of untracked files that move with me from branch to branch. I need to commit and stash as neccessary within the correct branches.
+
+When switching branches or checking out another set of commits, you might want to only have the files and directories that are a part of that actual version. The commands shown above will accomplish this.
+
+Be warned that any untracked files will be deleted, along with changes to tracked files. The two commands together reset the
+index and working tree, so ensure that any changes you don't want to lose were either committed to another branch or otherwise backed up somehow.
+
+```bash
+git clean -f -d
+```
+
+http://www.kernel.org/pub/software/scm/git/docs/v1.7.6/git-clean.html
+-d
+Remove untracked directories in addition to untracked files. If an untracked directory is managed by a different git repository, it is not removed by default. Use -f option twice if you really want to remove such a directory.
