also stash changes

--- a/_posts/2018-10-26-git-help.md
+++ b/_posts/2018-10-26-git-help.md
@@ -54,9 +54,26 @@ git reset --hard HEAD^
 
 Use soft, if you want to keep the local changes. Use hard, if you don't want to keep local changes either.
 
-### Clean Branches 
+### Untracked files 
 
 I find that when running git status, there are a lot of untracked files that move with me from branch to branch. I need to commit and stash as neccessary within the correct branches.
+
+**Not Risky Way**
+
+Stash my changes. 
+
+```bash
+git stash
+git stash drop
+git checkout B
+```
+
+If I don't drop my stashed changes, I can get this back. 
+
+
+**Super Risky Way**
+
+Note, I did this already once. I should have staged my changes instead. 
 
 When switching branches or checking out another set of commits, you might want to only have the files and directories that are a part of that actual version. The commands shown above will accomplish this.
 
